Fix back/forward button size and spacing
Remove the extra 1px on Adwaita, add spacing on elementary.

--- a/src/resources/themes/elementary.css
+++ b/src/resources/themes/elementary.css
@@ -97,3 +97,5 @@ dzlsuggestionpopover > revealer > box > elastic > scrolledwindow > viewport > li
 .bookmark-tag-widget image { -gtk-icon-shadow: none; }
 
 .bookmark-tag-widget-selected { background-color: @colorAccent; }
+
+.navigation-box button:not(:last-child) { margin-right: 6px; }
